# appaveli-codemind

./: .env.example  README.md  __init__.py  create-testproject.txt  pyproject.toml  requirements-dev.txt  requirements.txt  version.py
appaveli_codemind/: bootstrap.py  main.py
appaveli_codemind/ai/: __init__.py  llm_client.py
appaveli_codemind/cli/: __init__.py  commands.py
appaveli_codemind/core/: __init__.py  agent.py  language_detector.py  models.py
appaveli_codemind/utils/: __init__.py  file_utils.py  logging_config.py  validation.py
scripts/: install.sh
